# RAP-MLLM

./: README.md  cli.py  detector.py  pyproject.toml  requirements.txt  retriever.py
data/: Data.md
datastore/: database.json
eval/: TQA.py  VQA.py  caption.py  eval_qa.py  recognition.py  recognition_test.json  yollava-text-only-qa.json  yollava-visual-qa.json
example_database/: database.json
llava/: conversation.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py
llava/train/: rap_train.py  train.py
scripts/: train_lora_llava.sh  train_lora_phi3.sh  train_rap_llava.sh  train_rap_phi3.sh
